--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,16 @@ packages = [{include = "brain_games"}, ]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.10"
 prompt = "^0.4.1"
 
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.1.0"
 
 [build-system]
 requires = ["poetry-core"]
